tests/snapshots/system_cache_tests__cache_clear_help.snap
---
source: tests/system_cache_tests.rs
expression: stdout
---
Clear the cache

Usage: bivvy cache clear [OPTIONS]

Options:
  -c, --config <CONFIG>    Path to config file (overrides default .bivvy/config.yml)
      --expired            Only clear expired entries
  -f, --force              Don't prompt for confirmation
  -p, --project <PROJECT>  Path to project root (overrides current directory)
  -v, --verbose            Show verbose output
  -q, --quiet              Minimal output
      --no-color           Disable colored output
      --debug              Enable debug logging
      --trust              Trust all remote extends URLs without prompting
  -h, --help               Print help
  -V, --version            Print version
