tests/snapshots/system_cache_tests__cache_list_unknown_flag_stderr.snap
---
source: tests/system_cache_tests.rs
expression: stderr
---
error: unexpected argument '--nope' found

Usage: bivvy cache list [OPTIONS]

For more information, try '--help'.
