tests/snapshots/system_cache_tests__cache_unknown_subcommand_stderr.snap
---
source: tests/system_cache_tests.rs
expression: stderr
---
error: unrecognized subcommand 'frobnicate'

Usage: bivvy cache [OPTIONS] <COMMAND>

For more information, try '--help'.
